--- a/src/page/account/ForgotPasswordModal.css
+++ b/src/page/account/ForgotPasswordModal.css
@@ -158,3 +158,24 @@
     padding: 20px;
   }
 }
+.password-field {
+  position: relative;
+}
+
+.password-field input {
+  width: 100%;
+  padding-right: 40px;
+}
+
+.eye-icon {
+  position: absolute;
+  right: 12px;
+  top: 50%;
+  transform: translateY(-50%);
+  cursor: pointer;
+  color: #666;
+}
+
+.eye-icon:hover {
+  color: #000;
+}
