--- a/src/page/account/RegisterModal.css
+++ b/src/page/account/RegisterModal.css
@@ -189,3 +189,26 @@
   margin-bottom: 16px;
   font-size: 0.875rem;
 }
+
+.password-field {
+  position: relative;
+}
+
+.password-field input {
+  width: 100%;
+  padding-right: 40px; /* chừa chỗ cho icon */
+}
+
+.eye-icon {
+  position: absolute;
+  right: 12px;
+  top: 50%;
+  transform: translateY(-50%);
+  cursor: pointer;
+  color: #666;
+}
+
+.eye-icon:hover {
+  color: #000;
+}
+
